tests/fixtures/invalid/max_bytes_str.py
# Cannot call max() with Bytes, Str
x = max(b"hello", "hello")
